fix header cutoff issue in some web browsers

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,3 +52,6 @@ h6 {
 .fw-bolder {
   font-weight: 800;
 }
+.main-header:hover {
+  color: rgb(71, 161, 221);
+}
